NO-JIRA:  improve mixins failure modes, unit tests, compiler and linter warnings.